migrate-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: migrate
  name: migrate
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: migrate
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/simple-web-server-vapor-default: "true"
        io.kompose.service: migrate
    spec:
      containers:
        - args:
            - migrate
            - --yes
          image: simple--web--server--vapor:latest
          name: migrate
          resources: {}
      restartPolicy: Always
status: {}
