vapor_kub_config.yaml
apiVersion: v1
kind: Pod
metadata:
  name: vapor
  labels:
    env: production

spec:
  containers:
    - name: vapor_image
      image: kiarashvosough/images
